--- a/css/main.css
+++ b/css/main.css
@@ -28,13 +28,14 @@ header::before{
 }
 nav{
     position: fixed;
+    z-index: 100;
     top: 0;
     width: 100%;
     height: 80px;
     background-color: #ffffff;
     border-bottom: transparent;
     box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
-    transition: ease-in-out 0.5s;
+    transition: ease-in-out 0.5s;/*Efecto del menu al esconderse*/
 }
 .nav{
     display: flex;
